# CRT

./: .gitignore  README.md  pyproject.toml
crt/: __init__.py
crt/data/: __init__.py  synthetic.py
crt/graph/: __init__.py  causal_graph.py  hierarchical_graph.py
crt/integration/: __init__.py  adaptive_model.py  dual_mode.py  hypothesis_verifier.py  perception_reasoning.py  semantic_reasoning.py  sparse_reasoning.py
crt/transformer/: __init__.py  causal_attention.py
crt/utils/: metrics.py  visualization.py
docs/: experiment_guide.md  test_report.md
scripts/: download_data.py  evaluate.py  infer.py  train.py  train_unified.py
