[project]
name = "crt"
version = "0.1.0"
description = "Causal Reasoning Transformer - integrating causal inference with transformer architectures"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "networkx>=3.0",
    "matplotlib>=3.7",
    "tensorboard>=2.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1",
]
full = [
    "torch-geometric>=2.3",
    "transformers>=4.30",
    "datasets>=2.14",
    "wandb>=0.15",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["crt*"]
